@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.18 2012/05/16 13:43:14 marino Exp $
+# $NetBSD: Makefile,v 1.19 2012/06/03 23:56:59 dholland Exp $
 #
 
 DISTNAME=		audacious-1.5.1
-PKGREVISION=		9
+PKGREVISION=		10
 CATEGORIES=		audio
 MASTER_SITES=		http://distfiles.atheme.org/
 EXTRACT_SUFX=		.tbz2
