@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.36 2012/03/03 00:12:01 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2012/06/03 23:56:59 dholland Exp $
 #
 
 DISTNAME=		linc-1.1.1
-PKGREVISION=		9
+PKGREVISION=		10
 CATEGORIES=		net gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/linc/1.1/}
 EXTRACT_SUFX=		.tar.bz2
